@@ -9,6 +9,7 @@ Enhancements
 
 Bug fixes
  - [core] use the supplied Sieve creds to fetch the IMAP4 separator (#4846)
+ - [core] fixed Apple Calendar creation (#4813)
 
 
 4.1.0 (2019-10-24)
